fixed double scrollbar/ and footer issues -- now smooth scroll is NOT working

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,26 +1,13 @@
-/* .app-wrapper {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 30px;
-} */
-
 .container {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   scroll-snap-type: y mandatory;
   overflow: auto;
 }
 
 .page {
-  scroll-snap-align: start;
   height: 100vh;
-  /* border: 2px solid yellow; */
-  align-items: center;
-  justify-content: center;
-}
-
-.project-page {
-  scroll-snap-align: start;
-  /* border: 2px solid yellow; */
 }
 
 .about {
