--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,7 +1,10 @@
 .container {
   display: flex;
-  margin: 100px auto 0;
+  margin: 0 auto;
   max-width: 1000px;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 .greeting {
